add query bundle apio
